tests/ui/invalid_closure_send.stderr
error[E0277]: `*mut c_void` cannot be sent between threads safely
   --> tests/ui/invalid_closure_send.rs:19:50
    |
 12 |           let closure_fn = move |_args: &Bound<'_, PyTuple>,
    |  __________________________-
 13 | |                                _kwargs: Option<&Bound<'_, PyDict>>|
 14 | |               -> PyResult<()> {
    | |_____________________________- within this `{closure@tests/ui/invalid_closure_send.rs:12:26: 14:30}`
...
 19 |           PyCFunction::new_closure(py, None, None, closure_fn).unwrap();
    |           ------------------------                 ^^^^^^^^^^ `*mut c_void` cannot be sent between threads safely
    |           |
    |           required by a bound introduced by this call
    |
    = help: within `{closure@tests/ui/invalid_closure_send.rs:12:26: 14:30}`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `NotSend`
   --> tests/ui/invalid_closure_send.rs:5:8
    |
  5 | struct NotSend(*mut std::ffi::c_void);
    |        ^^^^^^^
note: required because it's used within this closure
   --> tests/ui/invalid_closure_send.rs:12:26
    |
 12 |           let closure_fn = move |_args: &Bound<'_, PyTuple>,
    |  __________________________^
 13 | |                                _kwargs: Option<&Bound<'_, PyDict>>|
 14 | |               -> PyResult<()> {
    | |_____________________________^
note: required by a bound in `PyCFunction::new_closure`
 --> src/types/function.rs
  |
  |     pub fn new_closure<'py, F, R>(
  |            ----------- required by a bound in this associated function
...
  |         F: Fn(&Bound<'_, PyTuple>, Option<&Bound<'_, PyDict>>) -> R + Send + Sync + 'static,
  |                                                                       ^^^^ required by this bound in `PyCFunction::new_closure`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
